fix bugs and ipdate swagger api
